genera/static/css/global.css
:root {
  --text-color: #000000;
  --text-color-2: #333333;
  --dark-grey-color: #535242;
  /* background-image: linear-gradient(#6a74ff1f, #FFFFFF); */
   background-color: #7e87f71f;
  --background-color: #7e87f71f;
  --light-grey-color: #FFFFFF;
  --medium-grey-color: #627EEA;
  --orange-color: #627dea85;
  --image-text-color: #627dea85;
  --white-color: #F7F8FA;
  --off-white-color: #2C2F36;
  --border-color: #EDEEF2;
  --text-generate-color: #FFFFFF;
  --text-preview-color: #5090EA;
  --filter-color-2: #627FEB;
  --p-text-color:rgb(76, 76, 76);
  --error-color: rgb(228, 86, 51);
  --disabled-background-color: #EAEAEA;
  --disabled-text-color: #A6A6A6;
  /* --filter-color: invert(15%) sepia(91%) saturate(4511%) hue-rotate(321deg) brightness(78%) contrast(110%); */
  --filter-color: invert(52%) sepia(52%) saturate(1041%) hue-rotate(200deg) brightness(88%) contrast(111%);
  --icon-color: invert(0%) sepia(3%) saturate(7485%) hue-rotate(139deg) brightness(87%) contrast(101%);
  --dark-grey-color-2: invert(28%) sepia(11%) saturate(872%) hue-rotate(19deg) brightness(92%) contrast(79%);
  --tab-img-color: invert(100%) sepia(4%) saturate(16%) hue-rotate(186deg) brightness(107%) contrast(106%);
  --remove-button-color: invert(80%) sepia(6%) saturate(35%) hue-rotate(169deg) brightness(97%) contrast(93%);
  --red-img-color: invert(55%) sepia(79%) saturate(3057%) hue-rotate(332deg) brightness(100%) contrast(101%);
  --header-height: 60px;
}

body.dark-mode { 
  --text-color: #FFFFFF;
  --text-color-2: #F2F2F2;
  --dark-grey-color: #FFFFFF;
  /* background-image: linear-gradient(#2D222E, #212429); */
  background-color: #27232B;
  --background-color: #27232B;
  --light-grey-color: #191B1F;
  --medium-grey-color: #755A7A;
  --orange-color: #16273C; 
  --image-text-color: #4c6993;
  --white-color: #212429;
  --off-white-color: #2C2F36;
  --border-color: #2a2e34;
  --text-generate-color: #BE92C6;
  --text-preview-color: #5090EA;
  --filter-color-2: #1966D4;
  --error-color: rgb(228, 86, 51);
  --disabled-background-color: #D8D8D8;
  --disabled-text-color: #A6A6A6;
  --p-text-color:rgb(204, 204, 204);
  --filter-color: invert(41%) sepia(9%) saturate(1467%) hue-rotate(244deg) brightness(87%) contrast(85%);
  --dark-grey-color-2: invert(100%) sepia(100%) saturate(0%) hue-rotate(78deg) brightness(105%) contrast(101%);
  --tab-img-color: invert(0%) sepia(100%) saturate(21%) hue-rotate(2deg) brightness(101%) contrast(107%);
   --remove-button-color: invert(9%) sepia(4%) saturate(2336%) hue-rotate(179deg) brightness(92%) contrast(87%);
}

@media only screen and (max-width: 815px) {
  /* For mobile phones: */
  [class*="col-"],
  [class="upload_layers_wrapper"],
  [class="upload_preview"],
  [class="upload_properties"]{
    width: 100% !important;
  }

  [id="upload_form"]{
    padding: 5px 12.5px !important;
  }

  [class*="hide_burger"]{
    display: none !important;
  }
  

}

@media only screen and (max-width: 500px) {
  [class="info_text"]{
    text-align: center!important;
  }
  [class*="team_card"]
  {
    display: block !important; 
  }
  [class*="pic_section"],
  [class="team_card_info"]{
    width: auto !important;
  }
  [class="row1"]{
    grid-template-columns: 1fr 1fr !important;
  }
  [class="main_upper"] > h1{
    font-size: 40px !important;
  }
  [class="main_upper"] > h4{
    font-size: 20px !important;
  }
  [class*="payments_description"] {
    display: block !important;
  }
  [class*="credit_section"]{
    width: auto !important;
  }
  [class*="middle_credit"]{
    border-style: none !important;
  }
}

* {
  transition: all 0.1s;
  transition-property: transform, background-color, opacity, padding;
}

/* GENERAL */
input[type="text"],
input[type="number"],
input[type="password"],
input[type="email"],
.inputize {
  width: 100%;
  background-color: var(--white-color);
  padding: 10px;
  border: 0.5px solid var(--border-color);
  -webkit-border-radius: 5px;
  border-radius: 5px;
  color: var(--dark-grey-color);
}

input[type="text"]:focus,
input[type="number"]:focus,
input[type="password"]:focus,
input[type="email"]:focus,
.inputize:focus {
  outline: 1px solid var(--dark-grey-color);
}

input[type="text"]:focus::placeholder,
input[type="number"]:focus::placeholder,
input[type="password"]:focus::placeholder,
input[type="email"]:focus::placeholder,
.inputize:focus::placeholder {
  opacity: 40%;
}

.base_form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  margin: 0 auto;
  gap: 10px;
  height: calc(100vh - var(--header-height));
  position: relative;
  /* margin: 15%;
  border-radius: 15px;
  outline: 1px solid gre;
  background-color: var(--white-color); */
}

.base_form * {
  box-sizing: border-box;
}

.base_form li {
  list-style: none;
  color: rgb(228, 86, 51);
  margin: 5px 0;
  width: 250px;
}

.base_form ul {
  padding: 0;
  margin: 0;
  width: 250px;
}

.base_form > :nth-child(2) {
  text-align: center;
  color: var(--p-text-color);
  font-size: 2rem;
  font-weight: thin;
  margin: 50px 0 0 0;
}

.base_form input {
  margin-top: 5px;
  width: 100%;
}

.base_form > p {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  width: 250px;
  gap: 5px;
  margin: 0;
}

.base_form label {
  color: var(--p-text-color);
  font-weight: 100;
  font-size: 1rem;
}

.base_form button {
  width: 250px;
  text-align: center;
  color: var(--dark-grey-color);
  font-size: 1.2rem;
  margin: 10vh 0 25px 0;
}

.error_handler_base {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: calc(100vh - var(--header-height));
  padding-bottom: 10vh;
}

.error_handler_base * {
  margin: 0;
}

.error_handler_base div{
  border-radius: 20px;
  outline: 1px solid var(--dark-grey-color);
  padding: 35px;
}

.error_handler_base div > *{
  margin: 15px 0;
}

.error_handler_base button {
  font-size: 1rem;
  margin-top: 25px;
}
/* ... */

